<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.LoginFragment"
    android:background="@color/purple_500">

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/header"
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:cardPreventCornerOverlap="false" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="60sp"
                    android:textColor="@color/medium_grey"
                    android:text="@string/world" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/sub_header"
            android:layout_below="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="40sp"
                android:text="@string/news"
                android:textColor="@android:color/white" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/login_container"
            android:layout_below="@+id/sub_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp" >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AuthenticationTextInputTheme"
                android:hint="@string/form_email_address">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/white"
                android:hint="@string/form_password"
                android:theme="@style/AuthenticationTextInputTheme" >

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:inputType="textPassword"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="18dp"
                android:paddingStart="18dp"
                android:theme="@style/LoginButtonTheme"
                android:text="@string/email_signin"
                android:textSize="16sp"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/google_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/LoginButtonTheme"
                android:drawableLeft="@drawable/googleg_standard_color_18"
                android:drawableStart="@drawable/googleg_standard_color_18"
                android:text="@string/google_signin"
                android:textSize="16sp"
                android:textAllCaps="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:paddingRight="12dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:includeFontPadding="false"
                android:text="@string/create_account"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/login_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:padding="18dp"
            android:gravity="end" >

            <TextView
                android:id="@+id/skip_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:textColor="@android:color/white"
                android:paddingLeft="12dp"
                android:paddingStart="12dp"
                android:paddingRight="6dp"
                android:paddingEnd="6dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:text="@string/skip"
                android:textSize="16sp"
                android:focusable="true" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
